--- a/sass/placeholders/_center.scss
+++ b/sass/placeholders/_center.scss
@@ -12,6 +12,26 @@
     justify-content: center;
     align-items: center;
 }
+
+%center-f-column{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+%center-f-column-start{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+%center-f-column-end{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
 %center-g{
     display: grid;
     place-items: center;
