--- a/sass/pages/_where.scss
+++ b/sass/pages/_where.scss
@@ -39,6 +39,7 @@
         .color-main{
             p{
                 font-weight: 600;
+                line-height: 1.5;
             }
         }
     }
